# AutoGit-CLI

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
include/autogit-cli/: Application.hpp  Authentication.hpp  Colors.hpp  Credentials.hpp
python/: auth.py
src/: Application.cpp  Authentication.cpp  main.cpp
